--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
- <html>
-    <head>
-      <title>{{ page.title }}</title>
-      <!-- link to main stylesheet -->
-      <link rel="stylesheet" type="text/css" href="/css/main.css">
-    </head>
-    <body>
-      <nav>
-          <ul>
-              <li><a href="/">Home</a></li>
-              <li><a href="/about">About</a></li>
-              <li><a href="/cv">CV</a></li>
-              <li><a href="/blog">Blog</a></li>
-          </ul>
-      </nav>
-      <div class="container">
-      
-      {{ content }}
-      
-      </div><!-- /.container -->
-      <footer>
-          <ul>
-              <li><a href="mailto:tbd@gmail.com">email</a></li>
-              <li><a href="https://github.com/xnt">github.com/xnt</a></li>
-        </ul>
-      </footer>
-    </body>
-  </html>
+<html>
+  {% include head.html %}
+
+  <body>
+    {% include header.html %}
+
+    <div class="content-wrapper">
+      <div class="content-wrapper__inner">
+        {{ content }}
+      </div>
+
+      {% include footer.html %}
+    </div>
+  </body>
+</html>
