:mag_right: Read More link

--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1062,6 +1062,12 @@ pre {
 	font-size: .9em;
 	color: #999999; }
 
+.read-more {
+	font-size: small;
+	margin-left: 0.3em;
+	margin-top: 0.5em;
+}
+
 .intro {
 	font-family: "Roboto Slab", serif;
 	font-size: 1.2em;
