--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1065,8 +1065,7 @@ pre {
 .read-more {
 	font-size: small;
 	margin-left: 0.3em;
-	margin-top: 0.5em;
-}
+	margin-top: 0.5em; }
 
 .intro {
 	font-family: "Roboto Slab", serif;
@@ -1170,18 +1169,22 @@ hr {
 	border: none;
 	box-shadow: none; }
 
-.post img {
-	max-width: 100%;
-	margin: 0 auto;
-	border-radius: 3px;
-	text-align: center; }
-.post pre {
-	width: 95%; }
-.post hr {
-	display: block;
-	width: 30%;
-	margin: 2em 0;
-	border-top: 1px solid #dddddd; }
+.post {
+	img {
+		max-width: 100%;
+		margin: 0 auto;
+		border-radius: 3px;
+		text-align: center; }
+	pre {
+		width: 95%; }
+	hr {
+		display: block;
+		width: 30%;
+		margin: 2em 0;
+		border-top: 1px solid #dddddd; }
+	p {
+		text-align: justify; }
+}
 
 .error-code {
 	font-size: 6em; }
