:city_sunrise: Replace email with Instagram

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,11 +68,11 @@
             {% endif %}
 
             {% if site.author.email %}
-              <!-- Email -->
+              <!-- Instagram -->
               <li class="navigation__item">
-                <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
-                  <i class="icon icon-mail"></i>
-                  <span class="label">Email</span>
+                <a href="https://www.instagram.com/{{ site.author.instagram_username }}" title="Instagram {{ site.author.instagram_username }}" target="_blank">
+                  <i class="icon icon-camera"></i>
+                  <span class="label">Instagram</span>
                 </a>
               </li>
             {% endif %}
