:feet: :art: Minor footer cleanup.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer class="footer">
-  <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved. <a href="https://github.com/joshgerdes/jekyll-uno">Theme</a> by Josh Gerdes. Pic by <a href="https://chrisberber.com/">Chris Berber</a></span>
+  <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved. 
+    <a href="https://github.com/joshgerdes/jekyll-uno" target="_blank">Theme</a> by Josh Gerdes. 
+    Pic by <a href="https://chrisberber.com/" target="_blank">Chris Berber</a>.</span>
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
