:bird: Twitter "send message" config and implementation

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,18 @@ layout: default
   <section class="post">
     {{ content }}
   </section>
+  {% comment %} 
+    TODO: move to a module or component or whatevs, since we use it in some other places!
+  {% endcomment %}
+  {% if site.twitter_contact %}
+    <section id="contact">
+      <div class="twitter-contact">
+        <a href="https://twitter.com/intent/tweet?screen_name={{ site.twitter_contact }}&ref_src=twsrc%5Etfw" 
+          class="twitter-mention-button" data-dnt="true" data-show-count="false">Tweet to @{{ site.twitter_contact }}</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+    </section>
+  {% endif %}
   {% if page.comments != false and site.disqus_shortname %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
 </article>
 {% if page.comments != false %}{% include disqus.html %}{% endif %}
