--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1433,7 +1433,8 @@ i {
 	font-size: 22px;
 	display: block;
 	position: relative; }
-
+.twitter-contact {
+	margin-bottom: 1em; }
 .post-list {
 	margin: 0;
 	padding: 0;
