--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,7 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="https://xnt.github.io/cv" title="link to {{ site.title }} resume" class="blog-button">Resume</a></li>
             </ul>
           </nav>
 
