:key: Add Keybase link
Add logic to render the keybase link
Setup Font Awesome
Change Instagram to Font Awesome
Remove RSS

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,8 @@
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="{{ site.baseurl }}/images/favicons/manifest.json">
   <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/images/favicons/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
