--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,7 +72,17 @@
               <!-- Instagram -->
               <li class="navigation__item">
                 <a href="https://www.instagram.com/{{ site.author.instagram_username }}" title="Instagram {{ site.author.instagram_username }}" target="_blank">
-                  <i class="icon icon-camera"></i>
+                  <i class="fab fa-instagram"></i>
+                  <span class="label">Instagram</span>
+                </a>
+              </li>
+            {% endif %}
+
+            {% if site.author.keybase_username %}
+              <!-- Keybase -->
+              <li class="navigation__item">
+                <a href="https://keybase.io/{{ site.author.keybase_username }}" title="Keybase {{ site.author.instagram_username }}" target="_blank">
+                  <i class="fab fa-keybase"></i>
                   <span class="label">Instagram</span>
                 </a>
               </li>
@@ -88,13 +98,13 @@
               </li>
             {% endif %}
 
-            <!-- RSS -->
+            <!-- RSS 
             <li class="navigation__item">
               <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
                 <i class="icon icon-rss"></i>
                 <span class="label">RSS</span>
               </a>
-            </li>
+            </li>-->
 
             </ul>
           </nav>
