--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.linkButton {
+	-moz-box-shadow: 0px 0px 6px 0px #4c4f4b;
+	-webkit-box-shadow: 0px 0px 6px 0px #4c4f4b;
+	box-shadow: 0px 0px 6px 0px #4c4f4b;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #243027), color-stop(1, #474747));
+	background:-moz-linear-gradient(top, #243027 5%, #474747 100%);
+	background:-webkit-linear-gradient(top, #243027 5%, #474747 100%);
+	background:-o-linear-gradient(top, #243027 5%, #474747 100%);
+	background:-ms-linear-gradient(top, #243027 5%, #474747 100%);
+	background:linear-gradient(to bottom, #243027 5%, #474747 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#243027', endColorstr='#474747',GradientType=0);
+	background-color:#243027;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	border:1px solid #757575;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:12px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 1px #90998e;
+}
+.linkButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #474747), color-stop(1, #243027));
+	background:-moz-linear-gradient(top, #474747 5%, #243027 100%);
+	background:-webkit-linear-gradient(top, #474747 5%, #243027 100%);
+	background:-o-linear-gradient(top, #474747 5%, #243027 100%);
+	background:-ms-linear-gradient(top, #474747 5%, #243027 100%);
+	background:linear-gradient(to bottom, #474747 5%, #243027 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#474747', endColorstr='#243027',GradientType=0);
+	background-color:#474747;
+}
+.linkButton:active {
+	position:relative;
+	top:1px;
+}
+
