--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,18 @@ code {
 	top:1px;
 }
 
+.App>div {
+  -moz-border-radius:5px;
+  -moz-box-shadow:0px 0px 59px 8px #000000 ;
+  -webkit-border-radius:5px;
+  -webkit-box-shadow:0px 0px 59px 8px #000000 ;
+  background:none repeat 0 0 rgba(255, 255, 255, 0.333);
+  border-radius:5px;
+  box-shadow:0px 0px 59px 8px #000000 ;
+  padding: 20px;
+}
+
+.App div p {
+  font-size: 18px;
+  text-shadow:8px 8px 30px #ffffff;
+}
