--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body {
-  margin: 0;
+	background-color: #111;
+	color: #eee;
   font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+		sans-serif;
+	margin: 2em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -67,9 +69,16 @@ h1, h2, h3, h4 {
   padding: 20px;
 }
 
-.App div p {
+#buttons {
+	text-align: center;
+}
+
+div p {
 	font-size: 1.4em;
-  text-shadow: 1em 1em 2em #ffffff;
+}
+
+h1, h2, h3 {
+	text-shadow: .1em .1em .1em #777;
 }
 
 h2 {
