--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
-  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+  color: #333;
+  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,26 +12,32 @@ code {
     monospace;
 }
 
-h1, h2, h3, h4 {
-	font-weight: bold;
+h1,
+h2,
+h3,
+h4 {
+  font-weight: bold;
 }
 
 #buttons {
-	text-align: center;
+  text-align: center;
 }
 
-div p, ul{
-	font-size: 1.4em;
+div p,
+ul {
+  font-size: 1.4em;
 }
 
-h1, h2, h3 {
-	text-shadow: .01em .01em .01em #777;
+h1,
+h2,
+h3 {
+  text-shadow: 0.01em 0.01em 0.01em #777;
 }
 
 h2 {
-	font-size: 1.8em;
+  font-size: 1.8em;
 }
 
 h3 {
-	font-size: 1.6em;
+  font-size: 1.6em;
 }
