--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  color: #333;
+  color: #747474 !important;
   font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -8,7 +8,7 @@ body {
 }
 
 #root {
-  background-color: #fdfdfd !important;
+  background-color: #272727 !important;
 }
 
 code {
@@ -35,7 +35,8 @@ ul {
 h1,
 h2,
 h3 {
-  text-shadow: 0.01em 0.01em 0.01em #777;
+  color: #f36633e7;
+  text-shadow: 0.01em 0.01em 0.01em #ffe440;
 }
 
 h2 {
