--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  color: #747474 !important;
+  color: #bbb !important;
   font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -36,7 +36,7 @@ h1,
 h2,
 h3 {
   color: #f36633e7;
-  text-shadow: 0.01em 0.01em 0.01em #ffe440;
+  text-shadow: 0.01em 0.01em 0.01em #f36633f3;
 }
 
 h2 {
