--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,18 @@ code {
     monospace;
 }
 
+h1 {
+  text-align: center;
+}
+
 h1,
 h2,
 h3,
 h4 {
+  font-size: 1.2em;
   font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 15px;
 }
 
 #buttons {
